sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: illegal start of simple expression
      while ((k>1)&&(plusPetit(v, (k-1)))) {
      ^